Fix Card alignment issues

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,24 @@
+.classicCard{
+display: inline-block;
+width: 100%;
+min-width: 35px;
+min-height: 50px;
+max-width: 56px;
+max-height: 80px;
+}
+
+.liteCard{
+  display: inline-block;
+  min-width: 35px;
+min-height: 50px;
+max-width: 80.08px;
+width: 100%;
+max-height: 114.4px;
+}
+
+
 .card {
-  width: 50px;
-  height: 60px;
+
   border-radius: 4px;
   box-shadow: 2px #dedede;
   border: 2px solid black;
